Added support for vector2 (Microsoft.Xna.Framework) and fixed bug with list not saving correctly

--- a/WinFormGenerator/WinFormGenerator.csproj
+++ b/WinFormGenerator/WinFormGenerator.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -60,6 +61,7 @@
     <Compile Include="Controls\EnumerableControl.cs" />
     <Compile Include="Controls\NumberBaseControl.cs" />
     <Compile Include="Controls\StringBaseControl.cs" />
+    <Compile Include="Controls\Vector2BaseControl.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
